# VirtualWhale

VirtualApp/: build.gradle  settings.gradle
VirtualApp/app/: build.gradle
VirtualApp/app/src/main/java/io/virtualapp/delegate/: MyComponentDelegate.java
VirtualApp/app/src/main/java/io/virtualapp/home/: LoadingActivity.java
VirtualApp/app/src/main/java/io/virtualapp/splash/: SplashActivity.java
VirtualApp/app/src/main/java/io/virtualapp/widgets/: RippleButton.java
VirtualApp/gradle/wrapper/: gradle-wrapper.properties
VirtualApp/javahookdemo/: build.gradle
VirtualApp/javahookdemo/src/androidTest/java/com/example/javahookdemo/: ExampleInstrumentedTest.java
VirtualApp/javahookdemo/src/main/: AndroidManifest.xml
VirtualApp/javahookdemo/src/main/java/com/example/javahookdemo/: Hooker.java  HttpHook.java  TestHook.java  XWAppBrandEngine.java
VirtualApp/javahookdemo/src/main/res/values/: strings.xml
VirtualApp/javahookdemo/src/test/java/com/example/javahookdemo/: ExampleUnitTest.java
VirtualApp/lib/: build.gradle
VirtualApp/nativehookdeme/: build.gradle
VirtualApp/nativehookdeme/src/main/: AndroidManifest.xml
VirtualApp/nativehookdeme/src/main/cpp/: CMakeLists.txt  native-lib.cpp  util.c  util.h
VirtualApp/nativehookdeme/src/main/java/com/example/nativehookdeme/: NativeHookTest.java
VirtualApp/nativehookdeme/src/main/res/values/: strings.xml
VirtualApp/whale/: build.gradle
VirtualApp/whale/src/main/: AndroidManifest.xml  CMakeLists.txt
VirtualApp/whale/src/main/res/values/: strings.xml
VirtualApp/whale/src/main/whale/: CMakeLists.txt
(+8 files in other folders)
